# 3rd_semester

./: .gitignore  README.md
Algorithms/lab_1/: CMakeLists.txt  main.cpp  main.txt
DB/lab_1/: CMakeLists.txt  funcs.c  main.c  structs.h
OOP/Lab3_Project/: README.md
OOP/Lab3_Project/rsc/Fonts/: MyFont.h
OOP/Lab3_Project/src/: main.cpp
OOP/Lab3_Project/src/AI/: AI.cpp  AI.h
OOP/Lab3_Project/src/Colors/: Colors.h
OOP/Lab3_Project/src/Graph/: Graph.h
OOP/Lab3_Project/src/MainSceneWindow/: MainSceneWindow.cpp  MainSceneWindow.h
OOP/Lab3_Project/src/Player/: Player.cpp  Player.h
OOP/Lab3_Project/src/Utility/: Utility.cpp  Utility.h
OOP/Lab3_Project/src/Wall/: Wall.cpp  Wall.h
OOP/Lab_1/docs/: Doxyfile
OOP/Lab_1/docs/html/: _book_8h_source.html  _bool_8h_source.html  _graph_8h_source.html  annotated.html  class_book-members.html  class_book.html  class_book_series.html  (+62 more)
OOP/Lab_2/: Lab_2.pro  alarm_sound.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
OOP/Module1/Task1/: Post.cpp  Post.h  Server.cpp  Server.h  Theme.h  User.h
OOP/Module1/Task2/: custom_traits.h  f.h
OOP/Module1/Task3/: task3.cpp  task3.h
OOP/build-Lab_2-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/: ui_mainwindow.h
OOP/build-Lab_2-Desktop_Qt_5_15_1_MinGW_64_bit-Release/: ui_mainwindow.h
OOP/lab_1/: Book.cpp  Book.h  Bool.cpp  Bool.h  CMakeLists.txt  Graph.cpp  Graph.h  main.cpp  stl_ostream.cpp  stl_ostream.h  test_runner.h
OOP/lab_1/Book/: Book.h
OOP/lab_1/Graph/: Graph.h
OOP/lab_1/includes/: stl_ostream.h
OOP/lab_1/sources/: Bool.cpp
OOP/test/: CMakeLists.txt  main.cpp
(+41 files in other folders)
